<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CareConnect</string>
    <string name="name_hint">&lt; 18.5</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="intro">Hi i am your smart drug directory"\n"I can help you finding your urgent drug information</string>
    <string name="okayButton">Okay</string>
    <string name="meet">Have we met before?</string>
    <string name="yes">Yes</string>
    <string name="No">No,not yet</string>
    <string name="Greetings">Nice to meet you</string>
    <string name="tap">You can always change you answer latter if you want to </string>
    <string name="getStarted">Okay,lets get started with your email address</string>
    <string name="emailHint">Type your email address</string>
    <string name="done">Done</string>
    <string name="choosePass">Please choose a strong password to keep your data safe</string>
    <string name="passHint">Type a password</string>
    <string name="signUpFinishing">Your sign up process has been almost done</string>
    <string name="showTermsAndCond">Show terms and Conditions</string>
    <string name="accept">I have read the terms and conditions"\n"And I accept it</string>
    <string name="signUp">Sign up now</string>
    <string-array name="query">
        <item>Furniture</item>
        <item>Real estate</item>
        <item>Services</item>
        <item>Pet care</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_permissions_title">Used permissions</string>
    <string name="app_permissions">

        &lt;i>Access Storage Permission:&lt;/i>&lt;br>
        Used to read files (images) from sd-card and save Health Records-files.&lt;br>&lt;br>

        &lt;i>Grant permission later:&lt;/i>&lt;br>
        If you don\'t permit this now, you can do it later. Please open then \"Settings -> App info\" and choose \"Permissions\".</string>
    <string name="app_landscape">Landscape</string>
    <string name="app_share_file">Choose file with:</string>
    <string name="create_image">Image to HR</string>
    <string name="create_text">Text to HR</string>
    <string name="add_image">+ image</string>
    <string name="add_text">+ text | …</string>
    <string name="app_title_edit">Edit image</string>
    <string name="app_title_crop">Crop image</string>
    <string name="app_portrait">Portrait</string>
    <string name="toast_yes">OK</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_successfully">Health Records successfully created.</string>
    <string name="toast_wait">Images successfully created. Open folder?</string>
    <string name="toast_successfully_not">An error occurred.</string>
    <string name="toast_open">Open?</string>
    <string name="toast_install_app">Please install an app to perform action.</string>
    <string name="toast_noImage">Please choose an image.</string>
    <string name="toast_noPDF">Choose or create a Health Records file.</string>
    <string name="toast_noText">Please enter text.</string>
    <string name="toast_savedImage">Please wait. Saving image.</string>
    <string name="toast_notAgain">Do not show again</string>
    <string name="toast_extension">No supported file extension</string>
    <string name="toast_edited">Image was edited. Saving?</string>
    <string name="toast_no">No</string>
    <string name="toast_remove_confirmation">Entry will be removed. OK?</string>
    <string name="toast_directory">Can\'t open Directory.</string>
    <string name="toast_files">No files in directory.</string>
    <string name="toast_picFile">Please choose image file.</string>
    <string name="toast_pdfFile">Please choose Health Records file.</string>
    <string name="toast_permission">Grant permission. Open settings?</string>
    <string name="action_share">Share Health Records</string>
    <string name="action_open">Open Health Records</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_share_with">Share Health Records with:</string>
    <string name="action_share_Text">In the attachment you can find the Health Records file:</string>
    <string name="action_help">Help</string>
    <string name="app_title">Please enter title:</string>
    <string name="app_title_date">Date</string>
    <string name="addImage">Add Image</string>
    <string name="dialog_createImage">Create Image</string>
    <string name="dialog_addImage">Add Image</string>
    <string name="dialog_addText">Add Text</string>
    <string name="dialog_createText">Create Text</string>
    <string name="app_hint" tools:ignore="TypographyEllipsis">Whatever you want ...</string>
    <string name="add_text_delete">Delete pages</string>
    <string name="add_text_delete_hint">Which pages do you want to keep?</string>
    <string name="add_text_hint_enterText">Write or paste text</string>
    <string name="add_text_meta_doc">Edit existing metadata</string>
    <string name="add_text_meta_default">Create new metadata</string>
    <string name="filter_1">Contrast</string>
    <string name="filter_2">Hue</string>
    <string name="filter_3">Brightness</string>
    <string name="filter_4">Sharpness</string>
    <string name="filter_5">Saturation</string>
    <string name="filter_6">Exposure</string>
    <string name="filter_7">Highlight Shadow</string>
    <string name="filter_8">White Balance</string>
    <string name="filter_9">Color Balance</string>
    <string name="filter_10">Levels Min (Mid Adjust)</string>
    <string name="dialog_encryption_hint_ownerPW">Owner password</string>
    <string name="dialog_encryption_hint_userPW">User password</string>
    <string name="choose_title">Edit filename</string>
    <string name="choose_filter">Choose filter</string>
    <string name="settings_prefApp">About the app</string>
    <string name="settings_prefDir">App directory</string>
    <string name="settings_prefEnc">Encryption</string>
    <string name="settings_prefMeta">Metadata</string>
    <string name="pref_imageQuality">Image quality</string>
    <string name="pref_imageQuality_summary">Set the image quality. Higher quality results in (much) bigger PDF sizes.</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_backup_summary">Do you want to backup pdf files before manipulating, e.g. deleting or adding pages?</string>
    <string name="pref_folder">Custom directory</string>
    <string name="pref_folder_hint">Format: \"/Download/PDF/\"</string>
    <string name="pref_folder_summary">Let empty to use the default directory (\"/Android/data/de.baumann.pdf/\"). Enter the path
        to your desired folder on your sdcard. The path must begin and end with \"/\" like \"/Download/PDF/\".
        If the desired directory does not exist, it will be generated automatically.</string>
    <string name="pref_metaAuthor">Author</string>
    <string name="pref_metaTitle">Title</string>
    <string name="pref_metaCreator">Creator</string>
    <string name="pref_metaKeywords">Keywords</string>
    <string name="pref_metaSubject">Subject</string>
    <string name="action_openSettings">App info</string>
    <string name="action_openSettings_summary">Open via the system settings the app info of the app. There you can,
        depending on your Android version, manage several things (Storage, network traffic, permissions, …).</string>
    <string-array name="listArrayImage">
        <item>High (100%)</item>
        <item>Normal (80%)</item>
        <item>Low (60%)</item>
    </string-array>
    <string-array name="listValuesImage">
        <item>100</item>
        <item>80</item>
        <item>60</item>
    </string-array>
    <string name="app_title_2">Saving picture …</string>
    <string name="crop_image_menu_rotate_left">Rotate left</string>
    <string name="crop_image_menu_rotate_right">Rotate right</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="choose_menu_2">Share</string>
    <string name="choose_menu_3">Rename</string>
    <string name="choose_menu_4">Delete</string>
    <string name="choose_hint">New Report name</string>
    <string name="action_sort">Sort entries</string>
    <string name="action_sort_title">Sort by title</string>
    <string name="action_sort_create">Sort by date</string>
    <string name="action_sort_ext">Sort by extension</string>
    <string name="action_filter">Search in entries</string>
    <string name="action_filter_title">Search in titles</string>
    <string name="action_filter_create">Search in creation dates</string>
    <string name="filter_today">Today</string>
    <string name="filter_yesterday">Yesterday</string>
    <string name="filter_before">Day before yesterday</string>
    <string name="filter_month">This month</string>
    <string name="filter_own">Own search</string>
    <string name="filter_clear">Cancel search</string>
    <string name="sort_title">title</string>
    <string name="sort_date">date</string>
    <string name="sort_extension">extension</string>
    <string name="choose_titleMain">Health Records</string>
    <string name="title_hint">Title</string>
    <string name="about_ext">Report Viewer</string>
    <string name="about_intro">Intro</string>
    <string name="about_intro_summary">Show the intro screen one more time.</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_finish">Let\'s start.</string>
    <string name="intro1_title">Track Health Record </string>
    <string name="intro1_text">Thank you for choosing \"CareConnect\". It\'s fully open free and still in development.
        You can reach a short help dialog on every tab by pressing \"menu -> help\" …</string>
    <string name="intro2_title">The tabs</string>
    <string name="intro2_text">You have a build in file explorer. You can either create new Health Record files from an image or from text or
        manipulate existing PDFs.</string>
    <string name="intro3_title">Nice to know:</string>
    <string name="intro3_text">At the bottom you can see the name of the actual Report and the format. By pressing this area
        you can switch between portrait and landscape format for your PDF page.</string>
    <string name="true_button">সত্য</string>
    <string name="false_button">মিথ্যা</string>
    <string name="initial_score">ফলাফল 0/40</string>
    <string name="incorrect_toast">Next!</string>
    <string name="correct_toast">Next!</string>
    <string name="question_1">আমি আশা এবং উৎসাহ নিয়ে অপেক্ষায় আছি।.</string>
    <string name="question_2">আমি সব আশা ছেড়ে দিয়েছি কারন নিজের ভাল কোন কিছু করার জন্য আমার আর কিছুই করার নেই।</string>
    <string name="adv_title">----পরামর্শ----</string>
    <string name="adv_01">১. কাছের বিশ্বস্ত কারো সাথে আপনার কথা গুলো শেয়ার করতে পারেন, এতে আপনি হালকা অনুভব করবেন।</string>
    <string name="adv_02">২. আপনার অনুভূতি গুলো ডাইরিতে লিখে রাখতে পারেন। এতেও আপনার কষ্টের অনুভুতিটা কমবে। তবে অবশ্যই পেজ গুলো ছিড়ে ফেলবেন।</string>
    <string name="adv_03">৩. ব্যায়াম করা: ব্যায়াম করলে এন্ডোরফিন নামক হরমোন নিঃসৃত হয়, যা শরীরে এনার্জি বাড়ায় এবং ইতিবাচক অনুভূতি বাড়িয়ে তুলে। তাই আপনি পছন্দমত ব্যায়াম করতে পারেন, যেমন- হাঁটা, সাইকেল চালানো, টেনিস খেলা, সাঁতার কাটা ইত্যাদি। নিয়মিত ব্যায়াম করলে আপনি যে উপকারিতা পাবেন তা হলো-\n\n
    ** মানসিক চাপ কমে আসবে \n
    ** উদ্বেগ এবং হতাশার অনুভূতি কমবে\n
    ** আত্মমর্যাদাবোধ বাড়বে\n
    ** ঘুমের উন্নতি হবে</string>
    <string name="adv_04">৪. মৃদু সুরের গান শুনতে পারেন। গান শুনলে সেরোটোনিন নামক হরমোন নিঃসৃত হয় যা বিষন্নতা বা মন খারাপের অনুভূতি কমাতে সাহায্য করে। \n\n</string>
</resources>